--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,12 @@
 =======
 redeme.md
 *.pyc
-物流/.vscode/
->>>>>>> 09fdb71d0489bb34f25ab774bdf572ff125c75be
+.vscode/
+Scripts/
+lib/
+Include/
+pyvenv.cfg
+物流/__pycache__/
+物流/.vscode
+物流/icon
+icon/
